# Spock-rest

./: README.md  Spock-rest.cabal  stack.yaml
examples/: example1.hs
src/Web/Spock/: Rest.hs
