name:                Spock-rest
version:             0.1.0.0
synopsis:            DSL for defining RESTful services in Spock (WIP)
description:         Please see README.md
homepage:            http://github.com/agrafix/Spock-rest
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           2015 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
extra-source-files:
    README.md
cabal-version:       >=1.10
tested-with:         GHC==7.10.2

library
  hs-source-dirs:      src
  exposed-modules:
                Web.Spock.Rest
  build-depends:
                base >= 4.7 && < 5,
                bytestring >=0.10,
                text >=1.2,
                hvect >=0.3,
                Spock >=0.9,
                reroute >=0.3,
                aeson >=0.8,
                mtl >=2.2,
                HList >=0.4,
                http-types >=0.8

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/Spock-rest
